--- a/_publications/0_2022-NLP4SG.md
+++ b/_publications/0_2022-NLP4SG.md
@@ -1,8 +1,8 @@
 ---
-title: "How Is NLP Addressing the UN Sustainable Development Goals? A Challenge Set to Analyze NLP for Social Good Papers"
+title: "Beyond Good Intentions: Reporting the Research Landscape of NLP for Social Good"
 collection: publications
 permalink: http://feradauto.github.io/files/NLP4SGDataset_2022.pdf
-date: 2022-05-01
+date: 2023-01-01
 venue: ''
 paperurl: 'http://feradauto.github.io/files/NLP4SGDataset_2022.pdf'
 citation: 'Fernando Gonzalez*, Zhijing Jin*, Jad Beydoun, Bernhard Schölkopf, Tom Hope, Mrinmaya Sachan†, Rada Mihalcea†'
