update publications and about

--- a/_publications/0_2022-NLP4SG.md
+++ b/_publications/0_2022-NLP4SG.md
@@ -1,10 +1,10 @@
 ---
 title: "Beyond Good Intentions: Reporting the Research Landscape of NLP for Social Good"
 collection: publications
-permalink: http://feradauto.github.io/files/NLP4SGDataset_2022.pdf
-date: 2023-01-01
+permalink: https://arxiv.org/abs/2305.05471
+date: 2023-05-09
 venue: ''
-paperurl: 'http://feradauto.github.io/files/NLP4SGDataset_2022.pdf'
-citation: 'Fernando Gonzalez*, Zhijing Jin*, Jad Beydoun, Bernhard Schölkopf, Tom Hope, Mrinmaya Sachan†, Rada Mihalcea†'
+paperurl: 'https://arxiv.org/abs/2305.05471'
+citation: 'Fernando Gonzalez*, Zhijing Jin*, Bernhard Schölkopf, Tom Hope, Mrinmaya Sachan, Rada Mihalcea'
 code: https://github.com/feradauto/nlp4sg_research_tracking
 ---
