--- a/_publications/0_2022-NLP4SG.md
+++ b/_publications/0_2022-NLP4SG.md
@@ -3,7 +3,7 @@ title: "Beyond Good Intentions: Reporting the Research Landscape of NLP for Soci
 collection: publications
 permalink: https://arxiv.org/abs/2305.05471
 date: 2023-05-09
-venue: 'EMNLP 2023'
+venue: 'EMNLP'
 paperurl: 'https://arxiv.org/abs/2305.05471'
 citation: 'Fernando Gonzalez*, Zhijing Jin*, Bernhard Schölkopf, Tom Hope, Mrinmaya Sachan, Rada Mihalcea'
 code: https://github.com/feradauto/nlp4sg_research_tracking
